# cmake_package_basic_template

./: README.md
demoapp/: CMakeLists.txt
demoapp/demoapp/: demoapp.cpp
demolib/: CMakeLists.txt
demolib/cmake/: demolib-config.cmake.in
demolib/demolib/: demolib.cpp  demolib.hpp
